--- a/interview-prep/index.html
+++ b/interview-prep/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>OOPS with JS</h1>
-    <script src="./oops/classes.js"></script>
+    <script src="./oops/classInheritance.js"></script>
   </body>
 </html>
