--- a/interview-prep/js-fundamentals-part-1/index.html
+++ b/interview-prep/js-fundamentals-part-1/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Fundamentals with JS</h1>
-    <script src="./logical-operators.js"></script>
+    <script src="./ternary-operator.js"></script>
   </body>
 </html>
