js-fundamentals-2-start

--- a/interview-prep/js-fundamentals-part-2/index.html
+++ b/interview-prep/js-fundamentals-part-2/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>JS Fundamentals Part 2</title>
   </head>
   <body>
-    <h1>Fundamentals with JS Part 1</h1>
-    <script src="./ternary-operator.js"></script>
+    <h1>Fundamentals with JS Part 2</h1>
+    <script src="./functions.js"></script>
   </body>
 </html>
