--- a/interview-prep/js-fundamentals-part-2/index.html
+++ b/interview-prep/js-fundamentals-part-2/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Fundamentals with JS Part 2</h1>
-    <script src="./functions.js"></script>
+    <script src="./while-loop.js"></script>
   </body>
 </html>
